[package]
name = "mini-jsonrpc"
version = "0.1.0"
authors = ["Nils Mathieu <contect@nils-mathieu.fr>"]
description = "JSON-RPC 2.0 types."
license = "MIT"
repository = "https://github.com/nils-mathieu/jsonrpc-sys"
readme = "README.md"

[features]
unknown_params = ["dep:serde_json", "serde_json/raw_value"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }